<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_mapper</name>
  <version>0.1.0</version>
  <description>Set of packages developed to explore, map and detect obstacles in an enviromment</description>
  <maintainer email="luizcarloscosmifilho@gmail.com">autonomous-robots</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>turtlebot3_interfaces</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pycodestyle</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
